--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gfx-spreadsheet",
   "version": "0.1.0",
   "private": true,
+  "main": "core/components.js",
+  "module": "core/components.esm.js",
+  "types": "gfxComponents.d.ts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -10,8 +13,6 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -19,7 +20,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "rollup": "npx rollup -c",
+    "deploy:np": "npx np",
+    "deploy:but:not:for:now": "npm publish dist --access=public",
+    "test": "react-scripts test --watchAll=false",
+    "dev:test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +44,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@silevis/reactgrid": "^4.0.5",
+    "@testing-library/dom": "^9.3.1",
+    "react-select": "^5.7.3",
+    "rollup": "^2.43.1",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-dts": "^2.0.1",
+    "rollup-plugin-node-externals": "^2.2.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.35.0",
+    "styled-components": "^6.0.0-rc.6"
+  },
+  "np": {
+    "yarn": false,
+    "contents": "dist"
   }
 }
