--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@lele/spreadsheet",
+  "name": "lele-spreadsheet",
   "version": "0.1.3",
-  "private": true,
   "main": "core/components.js",
   "module": "core/components.esm.js",
   "types": "gfxComponents.d.ts",
+  "engines": {
+    "node": ">=16.0.0 <17.0.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -22,7 +24,7 @@
     "build": "react-scripts build",
     "rollup": "npx rollup -c",
     "deploy:np": "npx np",
-    "deploy:but:not:for:now": "npm publish dist --access=public",
+    "deploy": "npm publish dist --access public",
     "test": "react-scripts test --watchAll=false",
     "dev:test": "react-scripts test",
     "eject": "react-scripts eject"
