--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "core/gfxComponents.js",
   "module": "core/gfxComponents.esm.js",
   "types": "gfxComponents.d.ts",
+  "private": true,
   "engines": {
     "node": ">=16.0.0 <17.0.0"
   },
