--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lele/spreadsheet",
+  "name": "lele-spreadsheet",
   "version": "0.1.7",
   "main": "core/gfxComponents.js",
   "module": "core/gfxComponents.esm.js",
