--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.35.0",
-    "styled-components": "^6.0.0-rc.6"
+    "rollup-plugin-typescript2": "^0.35.0"
   },
   "np": {
     "yarn": false,
